# spatter

./: .clang-format  .gitignore  .gitmodules  AUTHORS  Build.md  CHANGELOG.md  CITATION.cff  CMakeLists-HIP-worked.txt  CMakeLists-HIP-worked2.txt  CMakeLists-good-HIP-only.txt  CMakeLists-good-verbose.txt  CMakeLists.txt  CONTRIBUTING.md  COPYING  LICENSE  Makefile  README.md  _config.yml  badout.txt  cl-helper.c  cl-helper.h  compile_vs.sh  compile_vs_aprun.sh  gather.sh  gpu_info  gpu_info.cpp  main.c  parse-args.c  parse-args.h  quicktest.sh  results.db  results.json  results.sysinfo.txt  scatter.sh  setenv_ocl.sh  sgbuf.c  sgbuf.h  sgtype.h  test-omp.sh  test.sh
.github/: pull_request_template.md
.resources/: gather_comparison.eps
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  gz_read  results.csv  results.db  results.json  results.stats.csv  spatter
build-good/: CMakeCache.txt  gz_read  spatter
cmake/: BuildType.cmake  CompilerType.cmake  DisableIntree.cmake  FindHIP.cmake  FindPAPI.cmake  oneapi-toolchain.cmake
configure/: configure_cce_papi  configure_cuda  configure_intel_papi  configure_ocl_nvidia  configure_omp_cce  configure_omp_cce_sve  configure_omp_clang  configure_omp_gnu  configure_omp_ibmxl  configure_omp_intel  configure_omp_intel_papi  configure_omp_mpi_gnu  configure_omp_mpi_intel  configure_omp_wombat  configure_serial  configure_serial_cce  configure_serial_gnu  configure_sycl  configure_sycl_bitstream  configure_sycl_host  git_submodule_init.sh  install_tools.sh  serial_backend
cray/: kay_launch.sh  kay_launch_all.sh  submit.sh  ustride_tests.sh
cuda/: cuda-backend.c  cuda-backend.cu  cuda-backend.h  cuda_kernels.h  my_kernel.cu
devices/: README.md  ceasar-knl.dev  condesa-snb  k40.dev  titanxp.dev  v100.dev  wingtip-bdw.dev  wonbat-tx2.dev
dpct_output/: AlignedAllocator.hh  CudaBackend.dp.cpp  MainSourceFiles.yaml
include/: backend-support-tests.h  morton.h  mytime.h  papi-util.h  parse-args.h  sgbuf.h  sgtime.h  sgtype.h  sp_alloc.h  trace-util.h  util.h
json/: amg.json  bw_test.json  nekbone.json  reorder2.json  reorder_test.json  standard.json  strides.json  strides2.json  test1.json  test2.json  ustride.json
kernels/: .sgp3.cl.swp  gather.cl  openmp_kernels.c  openmp_kernels.h  scatter.cl  sg.cl  sg_accum.cl  sg_copy.cl  sgp.cl  sgp2.cl
notebooks/: CreatingSpatterPatterns.ipynb  GettingStarted.ipynb  GraphingPatterns.ipynb  Memsys2024Plots.ipynb  Plots.ipynb  bwbw_plot.py  bwbw_plot_memsys24.py  pattern_results.pkl  pattern_results_ext.pkl  requirements.txt  roi_funcs.txt  spatter_util.py
old/: Doxyfile
old-buil2/: CMakeCache.txt  gz_read  spatter
old-build/: CMakeCache.txt  Makefile  cmake_install.cmake  spatter
old-build3/: CMakeCache.txt  Makefile  gz_read  spatter
old-cmake-list/: HIPSupport.cmake
opencl/: cl-helper.h  gather1.cl  gather16.cl  gather2.cl  gather4.cl  (+19 more)
src/: CMakeLists-good-HIP-only.txt  CMakeLists-good-HIP-only2.txt  CMakeLists-trying-CUDA.txt  CMakeLists.txt  backend-support-tests.c  hilbert3d.c  json.c  main-good-HIP-only.cc  main.c  main.cc  morton.c  mt19937-64.c  mytime.c  papi-util.c  parse-args.c  sgbuf.c  sgtime.c  sp_alloc.c  trace-util.c  trace_util.c  vrand.c  vrand.h
src/Spatter/: AlignedAllocator.hh  Benchmark.hh  CMakeLists-good-HIP-only.txt  CMakeLists-good-verbose.txt  CMakeLists.txt  Config.cmake.in  Configuration.cc  Configuration.hh  Configuration.hip.cc  Configuration.hip.hh  CudaBackend.cu  CudaBackend.hh  HipBackend-abandoned.cpp  HipBackend-divisor.cpp  HipBackend-good.cpp  HipBackend-old.hh  HipBackend-placeholder.cpp  HipBackend-small-grid.cpp  HipBackend.cpp  HipBackend.hh  Input.hh  Input.hip.hh  JSONParser.cc  JSONParser.hh  JSONParser.hip.cc  JSONParser.hip.hh  OneAPIBackend.cc  OneAPIBackend.hh  OneApiBackend.cc  OneApiBackend.hh  PatternParser.cc  PatternParser.hh  PatternParser.hip.cc  PatternParser.hip.hh  Report.hh  SpatterConfig.cmake.in  SpatterTypes.hh  SpatterTypes.hip.hh  Spatter_config.hpp.cmakein  Timer.hh  (+2 more)
src/Spatter/save-spatter/: Configuration.hip.cc  Configuration.hip.hh  CudaBackend.hip.hh  Input.hip.hh  PatternParser.cc  PatternParser.hip.hh  Timer.hip.cc
src/cuda/: cuda-backend.c  cuda-backend.cu  cuda-backend.h  cuda_kernels.h  jitify.hpp  kernels.cu  my_kernel.cu
src/cuda_jit/: cuda-jit-backend.cu  cuda-jit-backend.h  kernels.cu.bak
src/include/: backend-support-tests.h  hilbert3d.h  parse-args.h  sgbuf.h  sgtime.h  trace-util.h  unused.h  util.h
src/opencl/: cl-helper.c
src/openmp/: omp-backend.h  openmp_kernels.c  openmp_kernels.h
src/papi/: papi_helper.c  papi_helper.h
src/python/: L1test.json  L1test.json.in  bw_test.json  bw_test.json.in  generate_json.py  plots.py  prefetch_plot.py  reorder2.py  reorder_test.py  reorder_test_plot.py  sizes.py  ustride.json.in  ustride_plot.py
src/serial/: serial-kernels.c  serial-kernels.h
src/sycl/: CMakeLists.txt  my_kernel.cpp  sycl-backend.cpp  sycl-backend.h  sycl-backend.hpp  sycl_backend.h  sycl_backend.hpp  sycl_dev_profile.hpp  sycl_kernel.cpp  sycl_kernels.h  sycl_kernels.hpp
tests/: CMakeLists-orig.txt  CMakeLists.txt  README.md  binary-trace.c  binary-trace.cc  concurrent.c  concurrent.cc  cray_submit.sh  gather.sh  gather1.sh  gather16.sh  gather1_omp.sh  gather2.sh  gather4.sh  gather8.sh  multilevel.c  multilevel.cc  noidx_test.sh  noprefetch  ocl_omp.sh  organize-results.sh  parse_concurrent.c  parse_concurrent.cc  parse_custom_suite.c  parse_custom_suite.cc  parse_json_suite.c  parse_json_suite.cc  parse_ms1_suite.c  parse_ms1_suite.cc  parse_multilevel.c  parse_multilevel.cc  parse_omp_threads_suite.c  parse_omp_threads_suite.cc  parse_random_suite.c  parse_random_suite.cc  parse_run_config_suite.c  parse_run_config_suite.cc  parse_run_config_suite_cpu.cc  parse_run_config_suite_gpu.cc  parse_size.c  (+47 more)
tests/in-progress/: sg-run-all.sh
tests/misc/: batch.batch  run-crnch-cuda.sh  run-crnch-hip.sh  run-crnch-oneapi.sh  spatter-cuda-test.out
tests/older/: sg-sweep-test.sh  sg1.sh  test.sh
tests/test-data/: amg.json  gz_read.cc
(+738 files in other folders)
